# serial2net-rs

./: CHANGELOG.md  Cargo.toml  serial2net-rs.drawio
config/: default.toml
docs/: FAKE_SERIAL.md
src/: config.rs  main.rs
src/network/: tcp_handler.rs  udp_broadcast.rs
src/serial/: mod.rs
